# esdb-projection-manager-trigger

./: Cargo.toml
etc/: projection.js
src/: main.rs
