[package]
name = "es-bug"
version = "0.1.0"
authors = ["YoEight <yo.eight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
eventstore = { git = "https://github.com/EventStore/EventStoreDB-Client-Rust.git", branch = "projections" }
names = "0.11"
structopt = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
